--- a/My Blog Website/Views/Shared/_Layout.cshtml
+++ b/My Blog Website/Views/Shared/_Layout.cshtml
@@ -27,39 +27,42 @@
         <div class="container-fluid">
             <div class="container">
                 <div class="row">
-                    <div class="col-12 col-md-3 fh5co_padding_menu">
+                    <div class="col-12 col-md-4 fh5co_padding_menu">
                         <a asp-area="" asp-controller="Home" asp-action="Index"><img src="~/images/radipuLogo.png" alt="img" class="fh5co_logo_width"/></a>
                     </div>
-            <div class="col-12 col-md-9 align-self-center fh5co_mediya_right">
-                <div class="text-center d-inline-block">
-                    <a class="fh5co_display_table"><div class="fh5co_verticle_middle"><i class="fa fa-search"></i></div></a>
+                    <div class="col-12 col-md-4 fh5co_padding_menu">
+                        <h5 style="text-align: center; color: crimson;">Think Something Different...</h5>
+                    </div>
+                    <div class="col-12 col-md-4 align-self-center fh5co_mediya_right">
+                        <div class="text-center d-inline-block">
+                            <a class="fh5co_display_table"><div class="fh5co_verticle_middle"><i class="fa fa-search"></i></div></a>
+                        </div>
+                        <div class="text-center d-inline-block">
+                            <a class="fh5co_display_table" href="https://www.linkedin.com/in/radipu/" target="_blank"><div class="fh5co_verticle_middle"><i class="fa fa-linkedin"></i></div></a>
+                        </div>
+                        <div class="text-center d-inline-block">
+                            <a class="fh5co_display_table" href="https://github.com/radipu" target="_blank"><div class="fh5co_verticle_middle"><i class="fa fa-github"></i></div></a>
+                        </div>
+                        <div class="text-center d-inline-block">
+                            <a href="https://twitter.com/radipu" target="_blank" class="fh5co_display_table"><div class="fh5co_verticle_middle"><i class="fa fa-twitter"></i></div></a>
+                        </div>
+                        <div class="text-center d-inline-block">
+                            <a href="https://fb.com/radipu13" target="_blank" class="fh5co_display_table"><div class="fh5co_verticle_middle"><i class="fa fa-facebook"></i></div></a>
+                        </div>
+                        <!--<div class="d-inline-block text-center"><img src="images/country.png" alt="img" class="fh5co_country_width"/></div>-->
+                        @*<div class="d-inline-block text-center dd_position_relative ">
+                            <select class="form-control fh5co_text_select_option">
+                                <option>English </option>
+                                <option>French </option>
+                                <option>German </option>
+                                <option>Spanish </option>
+                            </select>
+                        </div>*@
+                        <div class="clearfix"></div>
+                    </div>
                 </div>
-                <div class="text-center d-inline-block">
-                    <a class="fh5co_display_table" href="https://www.linkedin.com/in/radipu/" target="_blank"><div class="fh5co_verticle_middle"><i class="fa fa-linkedin"></i></div></a>
-                </div>
-                <div class="text-center d-inline-block">
-                    <a class="fh5co_display_table" href="https://github.com/radipu" target="_blank"><div class="fh5co_verticle_middle"><i class="fa fa-github"></i></div></a>
-                </div>
-                <div class="text-center d-inline-block">
-                    <a href="https://twitter.com/radipu" target="_blank" class="fh5co_display_table"><div class="fh5co_verticle_middle"><i class="fa fa-twitter"></i></div></a>
-                </div>
-                <div class="text-center d-inline-block">
-                    <a href="https://fb.com/radipu13" target="_blank" class="fh5co_display_table"><div class="fh5co_verticle_middle"><i class="fa fa-facebook"></i></div></a>
-                </div>
-                <!--<div class="d-inline-block text-center"><img src="images/country.png" alt="img" class="fh5co_country_width"/></div>-->
-                @*<div class="d-inline-block text-center dd_position_relative ">
-                    <select class="form-control fh5co_text_select_option">
-                        <option>English </option>
-                        <option>French </option>
-                        <option>German </option>
-                        <option>Spanish </option>
-                    </select>
-                </div>*@
-                <div class="clearfix"></div>
             </div>
         </div>
-    </div>
-</div>
         <div class="container-fluid bg-faded fh5co_padd_mediya padding_786">
             <div class="container padding_786">
                 <nav class="navbar navbar-toggleable-md navbar-light ">
