--- a/My Blog Website/Areas/Admin/Views/Author/Create.cshtml
+++ b/My Blog Website/Areas/Admin/Views/Author/Create.cshtml
@@ -46,7 +46,7 @@
                     </div>
                     <div class="form-group col-md-8 authform">
                         <label asp-for="Email" class="control-label">Author Email</label>
-                        <input asp-for="Email" class="form-control" />
+                        <input asp-for="Email" type="email" class="form-control" />
                         <span asp-validation-for="Email" class="text-danger"></span>
                     </div>
                     <div class="form-group col-md-8 authform">
