--- a/My Blog Website/Areas/Admin/Views/Author/Index.cshtml
+++ b/My Blog Website/Areas/Admin/Views/Author/Index.cshtml
@@ -17,6 +17,7 @@
 <table class="table table table-bordered table-hover">
     <thead>
         <tr class="text-center">
+            <th>SN.</th>
             <th>Author Name</th>
             <th>Username</th>
             <th>Email</th>
@@ -25,32 +26,36 @@
         </tr>
     </thead>
     <tbody>
-    @foreach (var item in Model) {
+        @{ int rowNo = 0; }
+        @foreach (var item in Model) {
             var conc = item.FirstName + " " + item.LastName;
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.FirstName) @Html.DisplayFor(modelItem => item.LastName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Username)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Email)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.AboutAuth)
-            </td>
-            <td>
-                <button class="btn btn-primary btn-sm">
-                    <i class="fa fa-edit" aria-hidden="true"></i>
-                    <a asp-action="Edit" asp-route-id="@item.AuthorId">Edit</a>
-                </button>
-                <button class="btn btn-danger btn-sm">
-                    <i class="fa fa-trash" aria-hidden="true"></i>
-                    <a asp-action="Delete" asp-route-id="@item.AuthorId">Delete</a>
-                </button>
-            </td>
-        </tr>
-}
+            <tr>
+                <td style="max-width:10px; text-align: center">
+                    @(rowNo += 1)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.FirstName) @Html.DisplayFor(modelItem => item.LastName)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Username)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Email)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.AboutAuth)
+                </td>
+                <td>
+                    <button class="btn btn-primary btn-sm">
+                        <i class="fa fa-edit" aria-hidden="true"></i>
+                        <a asp-action="Edit" asp-route-id="@item.AuthorId">Edit</a>
+                    </button>
+                    <button class="btn btn-danger btn-sm">
+                        <i class="fa fa-trash" aria-hidden="true"></i>
+                        <a asp-action="Delete" asp-route-id="@item.AuthorId">Delete</a>
+                    </button>
+                </td>
+            </tr>
+        }
     </tbody>
 </table>
