--- a/My Blog Website/Areas/Admin/Views/Posts/Index.cshtml
+++ b/My Blog Website/Areas/Admin/Views/Posts/Index.cshtml
@@ -1,45 +1,39 @@
 ﻿@model IEnumerable<My_Blog_Website.Areas.Admin.Models.Posts>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Posts";
     Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Index</h1>
+<h1 style="text-align:center">All Posts</h1>
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
+<button class="icon-btn add-btn">
+    <div class="add-icon"></div>
+    <div class="btn-txt">
+        <a asp-action="Create" asp-controller="Posts">Create Post</a>
+    </div>
+</button>
 <table class="table">
     <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Title)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Content)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.FeatureImage)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Category)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Tags)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Author)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Date)
-            </th>
-            <th></th>
+        <tr class="text-center">
+            <th>SN.</th>
+            <th>Title</th>
+            <th>Content</th>
+            <th>Feature Image</th>
+            <th>Category</th>
+            <th>Tags</th>
+            <th>Author</th>
+            <th>Publish Date</th>
+            <th>Action</th>
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
+        @{ int rowNo = 0; }
+        @foreach (var item in Model) {
         <tr>
+            <td style="max-width:10px; text-align: center">
+                    @(rowNo += 1)
+            </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Title)
             </td>
