--- a/My Blog Website/Views/Shared/_Layout.cshtml
+++ b/My Blog Website/Views/Shared/_Layout.cshtml
@@ -31,8 +31,9 @@
                         <a asp-area="" asp-controller="Home" asp-action="Index"><img src="~/images/radipuLogo.png" alt="img" class="fh5co_logo_width"/></a>
                     </div>
                     <div class="col-12 col-md-9 align-self-center fh5co_mediya_right">
-                        <div class="text-center d-inline-block">
-                            <a class="fh5co_display_table"><div class="fh5co_verticle_middle"><i class="fa fa-search"></i></div></a>
+                        <div class="search-box text-center d-inline-block">
+                            <input class="search-txt" type="text" name="" placeholder="Type to search" />
+                            <a class="search-btn fh5co_display_table"><div class="fh5co_verticle_middle"><i class="fa fa-search"></i></div></a>
                         </div>
                         <div class="text-center d-inline-block">
                             <a class="fh5co_display_table" href="https://www.linkedin.com/in/radipu/" target="_blank"><div class="fh5co_verticle_middle"><i class="fa fa-linkedin"></i></div></a>
