--- a/My Blog Website/Views/Shared/_Layout.cshtml
+++ b/My Blog Website/Views/Shared/_Layout.cshtml
@@ -87,6 +87,16 @@
                                 <li class="nav-item ">
                                     <a class="nav-link" href="single.html">How To <span class="sr-only">(current)</span></a>
                                 </li>
+                                <div class="nav-item dropdownmenu">
+                                    <a class="nav-link dropdown-toggle" href="#" id="dropdownMenuButton2" data-toggle="dropdown"
+                                    aria-haspopup="true" aria-expanded="false">Portfolio <span class="sr-only">(current)</span></a>
+                                    <div class="dropdownmenu-content" aria-labelledby="dropdownMenuLink_1">
+                                        <a class="dropdown-item" href="#">Live Demonstration</a>
+                                        <a class="dropdown-item" href="https://graphics.radipu.me/" target="_blank">Graphics</a>
+                                        <a class="dropdown-item" href="https://cv.radipu.me/" target="_blank">Resume</a>
+                                        <a class="dropdown-item" href="https://radipu.me/" target="_blank">My Intro</a>
+                                    </div>
+                                </div>
                                 @*<li class="nav-item dropdown">
                                     <a class="nav-link dropdown-toggle" href="#" id="dropdownMenuButton2" data-toggle="dropdown"
                                        aria-haspopup="true" aria-expanded="false">World <span class="sr-only">(current)</span></a>
@@ -105,9 +115,9 @@
                                         <a class="dropdown-item" href="#">Something else here</a>
                                     </div>
                                 </li>*@
-                                <li class="nav-item ">
+                                @* <li class="nav-item ">
                                     <a class="nav-link" href="https://radipu.me/" target="_blank">Portfolio <span class="sr-only">(current)</span></a>
-                                </li>
+                                </li> *@
                                 <li class="nav-item ">
                                     <a class="nav-link" asp-area="" asp-controller="Contact" asp-action="Index">Contact <span class="sr-only">(current)</span></a>
                                 </li>
