--- a/My Blog Website/Views/Shared/_Layout.cshtml
+++ b/My Blog Website/Views/Shared/_Layout.cshtml
@@ -87,14 +87,14 @@
                                 <li class="nav-item ">
                                     <a class="nav-link" href="single.html">How To <span class="sr-only">(current)</span></a>
                                 </li>
-                                <div class="nav-item dropdownmenu">
-                                    <a class="nav-link dropdown-toggle" href="#" id="dropdownMenuButton2" data-toggle="dropdown"
-                                    aria-haspopup="true" aria-expanded="false">Portfolio <span class="sr-only">(current)</span></a>
-                                    <div class="dropdownmenu-content" aria-labelledby="dropdownMenuLink_1">
-                                        <a class="dropdown-item" href="#">Live Demonstration</a>
-                                        <a class="dropdown-item" href="https://graphics.radipu.me/" target="_blank">Graphics</a>
-                                        <a class="dropdown-item" href="https://cv.radipu.me/" target="_blank">Resume</a>
-                                        <a class="dropdown-item" href="https://radipu.me/" target="_blank">My Intro</a>
+                                <div class="dropdownitemmenu">
+                                     <a class="nav-link dropdown-toggle" href="#" id="dropdownMenuButton2" data-toggle="dropdown"
+                                     aria-haspopup="true" aria-expanded="false">Portfolio <span class="sr-only">(current)</span></a>
+                                    <div class="dropdown-content">
+                                        <a href="#">Live Demonstration</a>
+                                        <a href="https://graphics.radipu.me/" target="_blank">Graphics</a>
+                                        <a href="https://cv.radipu.me/" target="_blank">Resume</a>
+                                        <a href="https://radipu.me/" target="_blank">My Intro</a>
                                     </div>
                                 </div>
                                 @*<li class="nav-item dropdown">
