--- a/My Blog Website/Views/Shared/_Layout.cshtml
+++ b/My Blog Website/Views/Shared/_Layout.cshtml
@@ -87,10 +87,10 @@
                                 <li class="nav-item ">
                                     <a class="nav-link" href="single.html">How To <span class="sr-only">(current)</span></a>
                                 </li>
-                                <div class="dropdownitemmenu">
+                                <div class="dropdownmenu">
                                      <a class="nav-link dropdown-toggle" href="#" id="dropdownMenuButton2" data-toggle="dropdown"
                                      aria-haspopup="true" aria-expanded="false">Portfolio <span class="sr-only">(current)</span></a>
-                                    <div class="dropdown-content">
+                                    <div class="dropdownmenu-content">
                                         <a href="#">Live Demonstration</a>
                                         <a href="https://graphics.radipu.me/" target="_blank">Graphics</a>
                                         <a href="https://cv.radipu.me/" target="_blank">Resume</a>
