--- a/My Blog Website/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/My Blog Website/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -18,9 +18,9 @@
 <div class="wrapper">
 
   <!-- Preloader -->
-  <div class="preloader flex-column justify-content-center align-items-center">
+  @* <div class="preloader flex-column justify-content-center align-items-center">
     <img class="animation__wobble" src="/images/radipu LOGO_white.png" alt="radipuLogo" height="100"width="300">
-  </div>
+  </div> *@
 
   <!-- Navbar -->
   <nav class="main-header navbar navbar-expand navbar-dark">
@@ -28,6 +28,18 @@
     <ul class="navbar-nav">
       <li class="nav-item">
         <a class="nav-link" data-widget="pushmenu" href="#" role="button"><i class="fas fa-bars"></i></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" id="logoff" href="#" role="button"><i class="fas fa-power-off"></i></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" id="passKey" href="#" role="button"><i class="fas fa-key"></i></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" id="user" href="#" role="button"><i class="fas fa-user"></i></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" id="globe" role="button" asp-controller="home" asp-action="index"><i class="fas fa-globe"></i></a>
       </li>
     </ul>
 
