removed hover for icons in nav bar

--- a/My Blog Website/Areas/Admin/Views/Posts/Index.cshtml
+++ b/My Blog Website/Areas/Admin/Views/Posts/Index.cshtml
@@ -7,7 +7,9 @@
 
 <h1 style="text-align:center">All Posts</h1>
 
-<button class="icon-btn add-btn">
+
+
+@* <button class="icon-btn add-btn">
     <div class="add-icon"></div>
     <div class="btn-txt">
         <a asp-action="Create" asp-controller="Posts">Create Post</a>
@@ -63,4 +65,4 @@
         </tr>
 }
     </tbody>
-</table>
+</table> *@
