--- a/My Blog Website/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/My Blog Website/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -29,18 +29,6 @@
       <li class="nav-item">
         <a class="nav-link" data-widget="pushmenu" href="#" role="button"><i class="fas fa-bars"></i></a>
       </li>
-      <li class="nav-item">
-        <a class="nav-link" id="logoff" href="#" role="button"><i class="fas fa-power-off"></i></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" id="passKey" href="#" role="button"><i class="fas fa-key"></i></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" id="user" href="#" role="button"><i class="fas fa-user"></i></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" id="globe" role="button" asp-controller="home" asp-action="index"><i class="fas fa-globe"></i></a>
-      </li>
     </ul>
 
     <!-- Right navbar links -->
@@ -162,6 +150,18 @@
           <i class="fas fa-th-large"></i>
         </a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link" role="button" asp-controller="home" asp-action="index"><i class="fas fa-globe"></i></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#" role="button"><i class="fas fa-user"></i></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#" role="button"><i class="fas fa-key"></i></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#" role="button"><i class="fas fa-power-off"></i></a>
+      </li>
     </ul>
   </nav>
   <!-- /.navbar -->
@@ -247,6 +247,12 @@
             <ul class="nav nav-treeview">
               <li class="nav-item">
                 <a asp-area="admin" asp-controller="posts" asp-action="index" class="nav-link">
+                  <i class="far fa-circle nav-icon"></i>
+                  <p>All Posts</p>
+                </a>
+              </li>
+              <li class="nav-item">
+                <a asp-area="admin" asp-controller="posts" asp-action="Create" class="nav-link">
                   <i class="far fa-circle nav-icon"></i>
                   <p>Create Post</p>
                 </a>
