--- a/My Blog Website/Views/Shared/_Layout.cshtml
+++ b/My Blog Website/Views/Shared/_Layout.cshtml
@@ -85,7 +85,10 @@
                                     <a class="nav-link" href="single.html">Ideas <span class="sr-only">(current)</span></a>
                                 </li>
                                 <li class="nav-item ">
-                                    <a class="nav-link" href="single.html">How To <span class="sr-only">(current)</span></a>
+                                    <a class="nav-link" href="single.html">HowTo <span class="sr-only">(current)</span></a>
+                                </li>
+                                <li class="nav-item ">
+                                    <a class="nav-link" href="single.html">Travels <span class="sr-only">(current)</span></a>
                                 </li>
                                 <div class="dropdownmenu">
                                      <a class="nav-link dropdown-toggle" href="#" id="dropdownMenuButton2" data-toggle="dropdown"
@@ -138,8 +141,15 @@
     <div class="container-fluid fh5co_footer_bg pb-3">
     <div class="container animate-box">
         <div class="row">
-            <div class="col-12 spdp_right py-5"><img src="~/images/radipu LOGO_white.png" alt="img" class="footer_logo"/></div>
+            @* <div class="col-12 spdp_right py-5"><img src="~/images/radipu LOGO_white.png" alt="img" class="footer_logo"/></div> *@
             <div class="clearfix"></div>
+            <div class="col-12 spdp_right py-3">
+                <div class="footer_main_title py-3"> Download Now</div>
+                <div class="footer_sub_about pb-3">
+                    <a href="https://facebook.com/rad.pb13" target="_blank"><img src="~/images/google-play-badge.png" alt="img" class="google-play" /></a>
+                    <a href="https://facebook.com/radipu13" target="_blank"><img src="~/images/App Store.svg" alt="img" class="app-store"/></a>
+                </div>
+            </div>
             <div class="col-12 col-md-4 col-lg-3">
                 <div class="footer_main_title py-3"> About</div>
                 <div class="footer_sub_about pb-3"> Lorem Ipsum is simply dummy text of the printing and typesetting
