updated about and radipu.me to radipu.com

--- a/My Blog Website/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/My Blog Website/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -755,7 +755,7 @@
 
   <!-- Main Footer -->
   <footer class="main-footer text-center">
-    <strong>&copy; <script>document.write(new Date().getFullYear())</script>. All rights reserved. Developed by <a href="https://cv.radipu.me" target="_blank">radipu</a>.</strong>
+    <strong>&copy; <script>document.write(new Date().getFullYear())</script>. All rights reserved. Developed by <a href="https://cv.radipu.com" target="_blank">radipu</a>.</strong>
     @*<div class="float-right d-none d-sm-inline-block">
       <b>Version</b> 3.2.0
     </div>*@
