--- a/My Blog Website/Views/Shared/_Layout.cshtml
+++ b/My Blog Website/Views/Shared/_Layout.cshtml
@@ -95,9 +95,9 @@
                                      aria-haspopup="true" aria-expanded="false">Portfolio <span class="sr-only">(current)</span></a>
                                     <div class="dropdownmenu-content">
                                         <a href="#">Live Demonstration</a>
-                                        <a href="https://graphics.radipu.me/" target="_blank">Graphics</a>
-                                        <a href="https://cv.radipu.me/" target="_blank">Resume</a>
-                                        <a href="https://radipu.me/" target="_blank">My Intro</a>
+                                        <a href="https://graphics.radipu.com/" target="_blank">Graphics</a>
+                                        <a href="https://cv.radipu.com/" target="_blank">Resume</a>
+                                        <a href="https://radipu.com/" target="_blank">My Intro</a>
                                     </div>
                                 </div>
                                 @*<li class="nav-item dropdown">
@@ -119,7 +119,7 @@
                                     </div>
                                 </li>*@
                                 @* <li class="nav-item ">
-                                    <a class="nav-link" href="https://radipu.me/" target="_blank">Portfolio <span class="sr-only">(current)</span></a>
+                                    <a class="nav-link" href="https://radipu.com/" target="_blank">Portfolio <span class="sr-only">(current)</span></a>
                                 </li> *@
                                 <li class="nav-item ">
                                     <a class="nav-link" asp-area="" asp-controller="Contact" asp-action="Index">Contact <span class="sr-only">(current)</span></a>
@@ -152,9 +152,9 @@
             </div>
             <div class="col-12 col-md-4 col-lg-3">
                 <div class="footer_main_title py-3"> About</div>
-                <div class="footer_sub_about pb-3"> Lorem Ipsum is simply dummy text of the printing and typesetting
-                    industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an
-                    unknown printer took a galley of type and scrambled it to make a type specimen book.
+                <div class="footer_sub_about pb-3"> Welcome! A hub for exploring thoughts, technology, ideas, how-to guides, and travel adventures.
+                    Here, you'll find reflections on life, the latest tech trends, innovative ideas, practical tech tips, and stories from around the world. 
+                    Join me on this journey of discovery, learning, and inspiration!
                 </div>
                 <div class="footer_mediya_icon">
                     <div class="text-center d-inline-block"><a class="fh5co_display_table_footer" href="https://linkedin.com/in/radipu" target="_blank">
@@ -217,7 +217,7 @@
 <div class="container-fluid fh5co_footer_right_reserved">
     <div class="container">
         <div class="row  ">
-            <div class="py-4 Reserved" style="text-align:center"> &copy; <script>document.write(new Date().getFullYear())</script>. All rights reserved. Developed by <a href="https://cv.radipu.me" target="_blank">radipu</a>. </div>
+            <div class="py-4 Reserved" style="text-align:center"> &copy; <script>document.write(new Date().getFullYear())</script>. All rights reserved. Developed by <a href="https://cv.radipu.com" target="_blank">radipu</a>. </div>
         </div>
     </div>
 </div>
