--- a/My Blog Website/Views/Contact/Index.cshtml
+++ b/My Blog Website/Views/Contact/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model My_Blog_Website.Models.Contacts
 
 @{
-    ViewData["Title"] = "Contact Us";
+    ViewData["Title"] = "Contact Me";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
@@ -18,7 +18,7 @@
                     </div>
                     <div class="col-9 align-self-center fh5co_contact_us_no_icon_difh5co_hover_2">
                         <span class="c_g d-block">Call Me</span>
-                        <span class="d-block c_g fh5co_contact_us_no_text">+880 167 6617846</span>
+                        <span class="d-block c_g fh5co_contact_us_no_text">+370 678 45300</span>
                     </div>
                     <div class="clearfix"></div>
                 </div>
