--- a/My Blog Website/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/My Blog Website/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -275,6 +275,18 @@
                 </a>
               </li>
               <li class="nav-item">
+                  <a asp-area="admin" asp-controller="posts" asp-action="Published" class="nav-link">
+                    <i class="far fa-circle nav-icon"></i>
+                    <p>Published Post</p>
+                  </a>
+              </li>
+              <li class="nav-item">
+                  <a asp-area="admin" asp-controller="posts" asp-action="Draft" class="nav-link">
+                    <i class="far fa-circle nav-icon"></i>
+                    <p>Draft Post</p>
+                  </a>
+              </li>
+              <li class="nav-item">
                 <a asp-area="admin" asp-controller="posts" asp-action="Create" class="nav-link">
                   <i class="far fa-circle nav-icon"></i>
                   <p>Create Post</p>
